--- a/PlanetWallet/Resources/4_Main.storyboard
+++ b/PlanetWallet/Resources/4_Main.storyboard
@@ -129,54 +129,45 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jQe-8d-ie6">
                                             <rect key="frame" x="0.0" y="228" width="375" height="52"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="cxp-rY-NMa">
-                                                    <rect key="frame" x="10" y="0.0" width="355" height="51"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rigel_IIIadfhioahdoifhioahsdiohfohasdhoashdfhoiasdhiof" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9QB-wS-Ubw" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
+                                                    <rect key="frame" x="10" y="0.0" width="355" height="35"/>
+                                                    <fontDescription key="fontDescription" name="WorkSans-SemiBold" family="Work Sans" pointSize="24"/>
+                                                    <color key="textColor" red="0.99607843137254903" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                                            <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xNi-iT-56P">
+                                                    <rect key="frame" x="123.5" y="35" width="128" height="20"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rigel-IIIadfhioahdoifhioahsdiohfohasdhoashdfhoiasdhiof" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9QB-wS-Ubw" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="355" height="20"/>
-                                                            <fontDescription key="fontDescription" name="WorkSans-SemiBold" family="Work Sans" pointSize="24"/>
-                                                            <color key="textColor" red="0.99607843137254903" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0x124A…bEF9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2s-Rl-Lg9" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="108" height="20"/>
+                                                            <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="16"/>
+                                                            <color key="textColor" name="detailTextDark"/>
                                                             <nil key="highlightedColor"/>
                                                             <userDefinedRuntimeAttributes>
                                                                 <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
-                                                                    <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <color key="value" name="detailTextLight"/>
                                                                 </userDefinedRuntimeAttribute>
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xNi-iT-56P">
-                                                            <rect key="frame" x="113.5" y="31" width="128" height="20"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0x124A…bEF9" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V2s-Rl-Lg9" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="108" height="20"/>
-                                                                    <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="16"/>
-                                                                    <color key="textColor" name="detailTextDark"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                    <userDefinedRuntimeAttributes>
-                                                                        <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
-                                                                            <color key="value" name="detailTextLight"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                    </userDefinedRuntimeAttributes>
-                                                                </label>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageAddressCopyDarkgray" translatesAutoresizingMaskIntoConstraints="NO" id="j6z-UR-qmR" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
-                                                                    <rect key="frame" x="108" y="0.0" width="20" height="20"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="width" constant="20" id="CxG-Vk-vMz"/>
-                                                                        <constraint firstAttribute="height" constant="20" id="Rwz-8K-J4s"/>
-                                                                    </constraints>
-                                                                    <userDefinedRuntimeAttributes>
-                                                                        <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imageAddressCopyGray"/>
-                                                                    </userDefinedRuntimeAttributes>
-                                                                </imageView>
-                                                            </subviews>
-                                                        </stackView>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageAddressCopyDarkgray" translatesAutoresizingMaskIntoConstraints="NO" id="j6z-UR-qmR" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
+                                                            <rect key="frame" x="108" y="0.0" width="20" height="20"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="20" id="CxG-Vk-vMz"/>
+                                                                <constraint firstAttribute="height" constant="20" id="Rwz-8K-J4s"/>
+                                                            </constraints>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imageAddressCopyGray"/>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </imageView>
                                                     </subviews>
-                                                    <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="9QB-wS-Ubw" secondAttribute="trailing" id="JxW-8J-9hC"/>
-                                                        <constraint firstItem="9QB-wS-Ubw" firstAttribute="leading" secondItem="cxp-rY-NMa" secondAttribute="leading" id="Uiw-gT-rsV"/>
-                                                    </constraints>
                                                 </stackView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="38K-y5-an8">
-                                                    <rect key="frame" x="123.5" y="31" width="128" height="20"/>
+                                                    <rect key="frame" x="123.5" y="39" width="128" height="16"/>
                                                     <connections>
                                                         <action selector="didTouchedCopyAddr:" destination="pBn-Jn-OOA" eventType="touchUpInside" id="ZUt-G2-ClO"/>
                                                     </connections>
@@ -184,14 +175,15 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="38K-y5-an8" firstAttribute="leading" secondItem="xNi-iT-56P" secondAttribute="leading" id="E9d-mi-OQ0"/>
-                                                <constraint firstItem="38K-y5-an8" firstAttribute="bottom" secondItem="xNi-iT-56P" secondAttribute="bottom" id="Q1z-de-8AJ"/>
-                                                <constraint firstItem="38K-y5-an8" firstAttribute="top" secondItem="xNi-iT-56P" secondAttribute="top" id="aCX-Ta-TN8"/>
-                                                <constraint firstItem="38K-y5-an8" firstAttribute="trailing" secondItem="xNi-iT-56P" secondAttribute="trailing" id="adt-SP-iqp"/>
-                                                <constraint firstItem="cxp-rY-NMa" firstAttribute="centerX" secondItem="jQe-8d-ie6" secondAttribute="centerX" id="b7f-Wn-wcJ"/>
-                                                <constraint firstItem="cxp-rY-NMa" firstAttribute="top" secondItem="jQe-8d-ie6" secondAttribute="top" id="f8c-2t-fkP"/>
-                                                <constraint firstItem="cxp-rY-NMa" firstAttribute="leading" secondItem="jQe-8d-ie6" secondAttribute="leading" constant="10" id="smf-Y1-XSN"/>
-                                                <constraint firstAttribute="trailing" secondItem="cxp-rY-NMa" secondAttribute="trailing" constant="10" id="xWP-kk-IM5"/>
+                                                <constraint firstItem="38K-y5-an8" firstAttribute="top" secondItem="xNi-iT-56P" secondAttribute="top" constant="4" id="2ac-re-5b1"/>
+                                                <constraint firstItem="9QB-wS-Ubw" firstAttribute="leading" secondItem="jQe-8d-ie6" secondAttribute="leading" constant="10" id="4Ig-sn-RAM"/>
+                                                <constraint firstItem="xNi-iT-56P" firstAttribute="top" secondItem="9QB-wS-Ubw" secondAttribute="bottom" id="C5V-ld-GdO"/>
+                                                <constraint firstItem="38K-y5-an8" firstAttribute="trailing" secondItem="xNi-iT-56P" secondAttribute="trailing" id="IKS-IA-7Hz"/>
+                                                <constraint firstAttribute="trailing" secondItem="9QB-wS-Ubw" secondAttribute="trailing" constant="10" id="Ici-qv-QUL"/>
+                                                <constraint firstItem="9QB-wS-Ubw" firstAttribute="top" secondItem="jQe-8d-ie6" secondAttribute="top" id="Jm2-QX-dvz"/>
+                                                <constraint firstItem="xNi-iT-56P" firstAttribute="centerX" secondItem="jQe-8d-ie6" secondAttribute="centerX" id="OgG-1u-yim"/>
+                                                <constraint firstItem="38K-y5-an8" firstAttribute="bottom" secondItem="xNi-iT-56P" secondAttribute="bottom" id="P5D-6C-Jvt"/>
+                                                <constraint firstItem="38K-y5-an8" firstAttribute="leading" secondItem="xNi-iT-56P" secondAttribute="leading" id="l1f-aB-zMr"/>
                                             </constraints>
                                         </view>
                                     </subviews>
