--- a/PlanetWallet/Resources/7_1_Planet.storyboard
+++ b/PlanetWallet/Resources/7_1_Planet.storyboard
@@ -199,7 +199,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yqr-zl-E5X">
                                         <rect key="frame" x="0.0" y="58" width="375" height="58"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cwg-Kn-UNz" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="ETH Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cwg-Kn-UNz" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
                                                 <rect key="frame" x="20" y="16" width="87" height="20.5"/>
                                                 <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                                 <nil key="textColor"/>
@@ -547,14 +547,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hEo-cd-kKi">
                                 <rect key="frame" x="20" y="247.5" width="335" height="25"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Save the Mnemonic Phrase safely." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CWb-BZ-H4P">
-                                        <rect key="frame" x="0.0" y="2.5" width="232.5" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Save the Mnemonic Phrase safely." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CWb-BZ-H4P" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="5" width="300" height="20.5"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                         <color key="textColor" name="errorText"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageWarning" translatesAutoresizingMaskIntoConstraints="NO" id="hLv-y9-eiG">
-                                        <rect key="frame" x="315" y="2.5" width="20" height="20"/>
+                                        <rect key="frame" x="315" y="5" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="9ee-0o-Tcl"/>
                                             <constraint firstAttribute="height" constant="20" id="bXt-cW-AKa"/>
@@ -564,10 +564,11 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="CWb-BZ-H4P" firstAttribute="leading" secondItem="hEo-cd-kKi" secondAttribute="leading" id="9Tm-HO-iG2"/>
+                                    <constraint firstItem="hLv-y9-eiG" firstAttribute="leading" secondItem="CWb-BZ-H4P" secondAttribute="trailing" constant="15" id="Lad-Od-ISD"/>
                                     <constraint firstAttribute="height" constant="25" id="QOI-OA-atL"/>
-                                    <constraint firstItem="CWb-BZ-H4P" firstAttribute="centerY" secondItem="hEo-cd-kKi" secondAttribute="centerY" id="U73-YE-fde"/>
-                                    <constraint firstItem="hLv-y9-eiG" firstAttribute="centerY" secondItem="hEo-cd-kKi" secondAttribute="centerY" id="ggg-Vv-ach"/>
+                                    <constraint firstItem="CWb-BZ-H4P" firstAttribute="top" secondItem="hEo-cd-kKi" secondAttribute="top" constant="5" id="Yro-wh-MxD"/>
                                     <constraint firstAttribute="trailing" secondItem="hLv-y9-eiG" secondAttribute="trailing" id="oVo-HA-x6H"/>
+                                    <constraint firstItem="hLv-y9-eiG" firstAttribute="top" secondItem="hEo-cd-kKi" secondAttribute="top" constant="5" id="r4v-70-iu6"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Backup Mnemonic Phrase" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BoV-aE-7eI" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
@@ -689,7 +690,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0l-d6-bh5" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
-                                <rect key="frame" x="20" y="134.5" width="335" height="55"/>
+                                <rect key="frame" x="20" y="138.5" width="335" height="55"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="sSa-AS-DWf" customClass="PWTextField" customModule="PlanetWallet" customModuleProvider="target">
                                         <rect key="frame" x="15" y="0.0" width="305" height="55"/>
@@ -732,7 +733,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Planet name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1Z-lg-Woz" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                <rect key="frame" x="20" y="108" width="115" height="16.5"/>
+                                <rect key="frame" x="20" y="108" width="128" height="20.5"/>
                                 <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                 <color key="textColor" red="0.66274509803921566" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -743,7 +744,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Planet name will be shown to others." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yz9-1o-sVW">
-                                <rect key="frame" x="20" y="199.5" width="335" height="16.5"/>
+                                <rect key="frame" x="20" y="203.5" width="335" height="20.5"/>
                                 <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                 <color key="textColor" name="errorText"/>
                                 <nil key="highlightedColor"/>
@@ -858,14 +859,14 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vUo-gq-iph">
                                 <rect key="frame" x="20" y="248" width="335" height="25"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Save the private key safely." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZBI-aw-agu">
-                                        <rect key="frame" x="0.0" y="2" width="185" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Save the PrivateKey safely." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZBI-aw-agu" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="5" width="300" height="20.5"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                         <color key="textColor" name="errorText"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageWarning" translatesAutoresizingMaskIntoConstraints="NO" id="Xch-bF-YzS">
-                                        <rect key="frame" x="315" y="2.5" width="20" height="20"/>
+                                        <rect key="frame" x="315" y="5" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="6VB-JP-nFU"/>
                                             <constraint firstAttribute="height" constant="20" id="BKO-TW-agy"/>
@@ -875,10 +876,11 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="H6H-yU-k2S"/>
+                                    <constraint firstItem="ZBI-aw-agu" firstAttribute="top" secondItem="vUo-gq-iph" secondAttribute="top" constant="5" id="Ia4-ZH-kcC"/>
+                                    <constraint firstItem="Xch-bF-YzS" firstAttribute="leading" secondItem="ZBI-aw-agu" secondAttribute="trailing" constant="15" id="LCX-HM-aYl"/>
                                     <constraint firstAttribute="trailing" secondItem="Xch-bF-YzS" secondAttribute="trailing" id="P0b-sH-cg8"/>
+                                    <constraint firstItem="Xch-bF-YzS" firstAttribute="top" secondItem="vUo-gq-iph" secondAttribute="top" constant="5" id="VZi-em-Dt8"/>
                                     <constraint firstItem="ZBI-aw-agu" firstAttribute="leading" secondItem="vUo-gq-iph" secondAttribute="leading" id="cgV-ti-5Vq"/>
-                                    <constraint firstItem="Xch-bF-YzS" firstAttribute="centerY" secondItem="vUo-gq-iph" secondAttribute="centerY" id="kV8-b8-eSh"/>
-                                    <constraint firstItem="ZBI-aw-agu" firstAttribute="centerY" secondItem="vUo-gq-iph" secondAttribute="centerY" id="qCc-Tx-Jih"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Backup Private key" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Pr-0N-jCM" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
